# Coffe-reports

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.py  pyproject.toml
src/loader/: data_loader.py
src/reports/: base.py  median_coffee.py
src/utils/: arg_parser.py  registry.py  table_printer.py
tests/: test_cli.py  test_data_loader.py  test_median_coffee_report.py
